syntax = "proto3";

option csharp_namespace = "Crib2023.Backend.Services.Catalog.GrpcProtos";

package Catalog;

message CatalogInvalidInputProperty {
  string name = 1;
  repeated string values = 2;
}

message CatalogOptionValueObject {
  int64 id = 1;
  string name = 2;
}
